--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.0",
     "styled-components": "^5.0.0",
     "yup": "^0.28.0"
   },
@@ -24,6 +25,8 @@
     "dev": "next",
     "start": "next start",
     "build": "next build",
+    "prod": "next build && next export",
+    "serve": "serve ./out",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
